<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:id="@+id/register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="0.65in"
        android:ems="10"
        android:hint="@string/register_username_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_email"
        android:layout_alignStart="@+id/register_email"
        android:layout_below="@+id/register_email"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_password"
        android:layout_alignStart="@+id/register_password"
        android:layout_below="@+id/register_password"
        android:layout_centerVertical="true"
        android:layout_marginBottom="14dp"
        android:ems="10"
        android:hint="@string/register_confirm_hint"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/register_username"
        android:layout_alignStart="@+id/register_username"
        android:layout_below="@+id/register_username"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/register_email_hint"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/register_submit"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_confirm"
        android:layout_centerHorizontal="true"
        android:text="@string/register_submit" />

    <TextView
        android:id="@+id/register_linkToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_submit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:clickable="true"
        android:text="@string/register_linkToLogin"
        android:textAllCaps="true"
        android:textColor="#88b04b"
        android:focusable="true" />
</RelativeLayout>