<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/with_shadow">

    <TextView
        android:id="@+id/theme_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/theme_name"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/theme_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/theme_description"
        android:paddingTop="10dp"
        android:textColor="?attr/textColorAlertDialogListItem"
        android:textSize="18sp"/>


    <TextView
        android:id="@+id/theory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-7dp"
        android:text="@string/theme_theory"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/course_moreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-7dp"
        android:gravity="center"
        android:text="@string/theme_moreInfo"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="18sp" />
</LinearLayout>