<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/detailLayout">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_test"
        android:textAlignment="textStart"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:layout_marginLeft="10dp"
        android:gravity="start" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/details_description"
        android:textColor="?attr/textColorAlertDialogListItem"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/description_test_questions"
        android:textColor="?attr/textColorAlertDialogListItem"
        android:textSize="24sp"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/questions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="?attr/textColorAlertDialogListItem"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"/>
</LinearLayout>